--- a/academy/website/assets/css/main.css
+++ b/academy/website/assets/css/main.css
@@ -148,3 +148,87 @@
     float: right;
     margin: 0 0 2em 2em;
   }
+
+
+		@media screen and (max-width: 1480px) {
+
+			.container {
+				width: 80%;
+			}
+
+		}
+
+
+		@media screen and (max-width: 900px) {
+
+
+			  .container.left .side {
+			    left: 0;
+			    width: 40%;
+			    -webkit-border-radius: 15px 15px 0 0;
+					padding: 0;
+					margin: 0;
+			  }
+
+				.container .side img {
+					padding: 0;
+					margin: 0;
+				}
+
+			  .container.right .side {
+			    right: 0;
+			    width: 60%;
+			    -webkit-border-radius: 15px 15px 0 0;
+					padding: 0;
+					margin: 0;
+			  }
+
+		  .container .side img {
+		     left: 0;
+		   }
+
+			.container {
+				width: 80%;
+			}
+
+
+			.container {
+				padding: 0;
+			}
+
+				.container .side {
+					position: relative !important;
+					left: 0 !important;
+					width: 100% !important;
+					height: auto !important;
+				}
+
+					.container .side img {
+						position: relative;
+						height: auto;
+						width: 100%;
+					}
+
+				.container section {
+					margin: 0 !important;
+					padding: 2em 1.25em 2em 1.25em !important;
+				}
+
+
+		}
+/*
+		@media screen and (max-width: 840px) {
+
+			.container {
+				width: 95%;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.container {
+				width: 95% !important;
+			}
+
+		}*/
